[project]
name = "monitorinsights-zerotohero"
version = "0.1.0"
description = ""
authors = [
    {name = "Brandon DeGolier",email = "63262146+bdegs@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book (>=1.0.4.post1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=2.2.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
